force-app/main/default/objects/Field_History_Reporting__c/Field_History_Reporting__c.object-meta.xml
<CustomObject>
    <description>This field is the Target Object for the Records moved to Physician Analytic Snapshot</description>
    <label>Field History Reporting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Field History Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field History Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>