force-app/main/default/objects/Field_History_Reporting__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>