force-app/main/default/objects/Field_History_Reporting__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>