force-app/main/default/objects/Field_History_Reporting__c/fields/Edit_Date__c.field-meta.xml
<CustomField>
    <fullName>Edit_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Edit Date</label>
    <type>DateTime</type>
</CustomField>