force-app/main/default/objects/Field_History_Reporting__c/fields/Edited_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Edited_By_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Edited By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>