force-app/main/default/objects/Field_History_Reporting__c/fields/Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Execution Time</label>
    <type>DateTime</type>
</CustomField>