force-app/main/default/objects/Field_History_Reporting__c/fields/Field_Event__c.field-meta.xml
<CustomField>
    <fullName>Field_Event__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field / Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>