force-app/main/default/objects/Field_History_Reporting__c/fields/History_ID__c.field-meta.xml
<CustomField>
    <fullName>History_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>History ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>