force-app/main/default/objects/Field_History_Reporting__c/fields/Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>